# 3dengine

./: .gitignore  .gitmodules  CMakeLists.txt  PERFORMANCE_IMPROVEMENTS.md  README.md  build.bat  build.sh
include/: glad.h
lib/imgui/: TextEditor.cpp  imfilebrowser.h
resources/: 3dengine.icns  Info.plist.in
resources/table/: table.fbx
resources/wooden-chair/source/: chair.fbx
shaders/: fragment_shader.glsl  fragment_shader_no_texture.glsl  grid_fragment_shader.glsl  grid_vertex_shader.glsl  universal_fragment_shader.glsl  universal_vertex_shader.glsl  vertex_shader.glsl
src/: camera.cpp  camera.h  console_stream_buffer.cpp  console_stream_buffer.h  cube.cpp  cube.h  editor.cpp  editor.h  engine.cpp  engine.h  framebuffer.cpp  framebuffer.h  glad.c  grid.cpp  grid.h  input_handler.cpp  input_handler.h  input_system.cpp  input_system.h  main.cpp  maint.cpp  mesh.cpp  mesh.h  model.cpp  model.h  object.cpp  object.h  process_input.cpp  process_input.h  scene.cpp  scene.h  script.cpp  script.h  script_system.cpp  script_system.h  shader.cpp  shader.h  stb_image.h  window.cpp  window.h
src/editor/: editor.cpp  editor.h  menu_bar.cpp  menu_bar.h
src/editor/windows/: console.cpp  console.h  diagnostics.cpp  diagnostics.h  hierarchy.cpp  hierarchy.h  project_creation.cpp  project_creation.h  project_selection.cpp  project_selection.h  script_viewer.cpp  script_viewer.h  scripts.cpp  scripts.h  viewport.cpp  viewport.h
src/utils/: path_utils.cpp  path_utils.h
